sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: not found: value k
        if (plusPetit(v, i-k)) {
                           ^AlgInsertionSort:9: error: not found: value k
          echange(i-k, i-k+1);
                    ^AlgInsertionSort:9: error: not found: value k
          echange(i-k, i-k+1);
                         ^AlgInsertionSort:10: error: not found: value k
          c = i-k
                ^AlgInsertionSort:13: error: not found: value c
      setValeur(c, v)
                ^